# poco_connect

./: README.md
poco_tcp/: CMakeLists.txt
poco_tcp/include/: poco_socket.h  task1.h  transmit.h
poco_tcp/poco_socket/: CMakeLists.txt  poco_socket.cpp  task1.cpp
poco_tcpclient/: 1m  2m  CMakeLists.txt
poco_tcpclient/client/: poco_tcpclient.cpp  poco_tcpclient.h
